# Fly-Plane-Fly

./: LICENSE  README.md  flyplanefly.cabal  log.txt  mahppybird.cabal  more  run.sh  stack.yaml
.stack-work/install/x86_64-linux-ncurses6/lts-11.8/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  Stack-0.3.2-5igJRfmx2XME1wgcSlKKIG  StateVar-1.1.1.0-7hicwZfZdWh9t78q7QM8bm  Stream-0.4.7.2-9es9HWZxNx9EHPyyQoVEpt  adjunctions-4.4-85xYTIhCewK8I7jaL5v6Sj  base-orphans-0.7-CqEfBQ2VoSwBto5sloaJI4  bifunctors-5.5.2-2xREv4oZtKi8pLC91AmMqx  bytes-0.15.4-5F9O31FmG5FIYoabb0beUb  cabal-doctest-1.0.6-K34z9qJFa9S9lhohNycUoO  call-stack-0.1.0-BVjoAlBRe9FCSr5eFfllei  cereal-0.5.5.0-LlCRTX2XyPnC6qdZ6C2b02  clock-0.7.2-7eenmRf30tW97adCwu2PN3  comonad-5.0.3-ANHoI6yZjlkJt0gBwNxqyu  contravariant-1.4.1-JXjDAnKZeh1Db1ZTeevPkj  data-default-class-0.1.2.0-8hmGYd6GPAfLQPQcWKOjRm  distributive-0.5.3-F6z9Ydi0AiA6rP8AS0blTR  exceptions-0.8.3-CYMTujxEbkkJnOJ7pW82ZD  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  free-5.0.2-7MTUQqyNvpUDYBpWVP0GpG  ghc-paths-0.1.0.9-jtXMj34IrEDKFvgWnrf0G  hashable-1.2.7.0-LmYYwdRyxeo1gZdEWccp3y  haskeline-0.7.4.2-FveYnsO43HLJrxPSFExTsX  integer-logarithms-1.0.2.1-KAhnLbvomfTHb5G0xy3U7G  intero-0.1.31  lens-4.16.1-BB9KjVzASHRLWYPIunmtep  (+31 more)
src/: Aabb.hs  Animations.hs  AnimationsManager.hs  BackgroundManager.hs  ButtonTransforms.hs  Buttons.hs  CameraManager.hs  Config.hs  FlyPlaneFly.hs  Game.hs  GameStateManager.hs  GameStates.hs  GameVars.hs  Gravity.hs  GuiTransforms.hs  InitGameVars.hs  Input.hs  Logger.hs  MahppyBird.hs  Main.hs  Menu.hs  Movement.hs  Physics.hs  Play.hs  PlayerManager.hs  RectangleTransforms.hs  Renderer.hs  Resources.hs  SceneStateManager.hs  ScoreManager.hs  SoundManager.hs  TimeManager.hs  Util.hs  WallManager.hs  Walls.hs
(+24 files in other folders)
