name:                flyplanefly
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mahppybird#readme
license:             BSD3
license-file:        LICENSE
author:              Jared Pon
maintainer:          example@example.com
copyright:           2018 Jared Pon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fly-plane-fly
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N -O2
  other-modules: FlyPlaneFly
                 , Logger
                 , Input
                 , Renderer
                 , Physics
                 , Walls
                 , WallManager
                 , PlayerManager
                 , ScoreManager
                 , TimeManager
                 , SceneStateManager
                 , CameraManager
                 , AnimationsManager
                 , SoundManager
                 , Aabb
                 , Buttons
                 , GameVars
                 , Util
                 , GuiTransforms
                 , Animations
                 , Resources
  build-depends:       base >= 4.7 && < 5
                       , sdl2
                       , sdl2-ttf
                       , sdl2-image
                       , sdl2-mixer
                       , mtl
                       , StateVar
                       , linear
                       , Stream
                       , random
                       , clock
                       , filepath
                       , text
                       , lens
